force-app/main/default/objects/Sentry_Suppression_Rule__mdt/Sentry_Suppression_Rule__mdt.object-meta.xml
<CustomObject>
    <description>Alert suppression rules for duplicate, integration-user, and sandbox workflows.</description>
    <label>Sentry Suppression Rule</label>
    <pluralLabel>Sentry Suppression Rules</pluralLabel>
</CustomObject>