force-app/main/default/objects/Sentry_Suppression_Rule__mdt/fields/Match_Value__c.field-meta.xml
<CustomField>
    <fullName>Match_Value__c</fullName>
    <label>Match Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>