force-app/main/default/objects/Sentry_Suppression_Rule__mdt/fields/Rule_Type__c.field-meta.xml
<CustomField>
    <fullName>Rule_Type__c</fullName>
    <label>Rule Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>