force-app/main/default/objects/Sentry_Suppression_Rule__mdt/fields/Window_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Window_Minutes__c</fullName>
    <label>Window Minutes</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>